--- a/CBayMobileApp/Views/Account/Account.xaml
+++ b/CBayMobileApp/Views/Account/Account.xaml
@@ -34,6 +34,9 @@
                     </FlexLayout>
                 </Frame>
                 <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="To_UserProfile"/>
+                    </Frame.GestureRecognizers>
                     <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
                         <StackLayout Orientation="Horizontal">
                             <Image Source="cbaypersonaldetail.png" Margin="0,0,20,0"/>
