--- a/CBayMobileApp/Views/Account/Membership.xaml
+++ b/CBayMobileApp/Views/Account/Membership.xaml
@@ -8,9 +8,12 @@
     <ScrollView Margin="20" VerticalScrollBarVisibility="Never">
         <StackLayout>
             <StackLayout>
-                <Label Text="Abdulbaki Shuaib" TextColor="#000000" FontSize="20" FontFamily="DMSans-Bold"/>
+                <Label Text="{Binding Name}" TextColor="#000000" FontSize="20" FontFamily="DMSans-Bold"/>
 
-                <Label Text="Member since March, 2023" TextColor="#000000" FontSize="14" FontFamily="DMSans-Regular"/>
+                <StackLayout Orientation="Horizontal" Spacing="0">
+                    <Label Text="Member since " TextColor="#000000" FontSize="14" FontFamily="DMSans-Regular"/>
+                    <Label Text="{Binding JoinedDate}" TextColor="#000000" FontSize="14" FontFamily="DMSans-Regular"/>
+                </StackLayout>
 
                 <Frame BackgroundColor="{StaticResource PrimaryColor}" Padding="20,15,20,10" HorizontalOptions="FillAndExpand" CornerRadius="10" Margin="0,10" HasShadow="False">
                     <StackLayout Margin="0,0,0,0">
