--- a/CBayMobileApp/Views/Identity/LoginPage.xaml
+++ b/CBayMobileApp/Views/Identity/LoginPage.xaml
@@ -118,7 +118,7 @@
 
         <Frame HasShadow="False" CornerRadius="10" BackgroundColor="{StaticResource PrimaryColor}" Margin="0,20,0,0" Padding="0,10" >
             <Frame.GestureRecognizers>
-                <TapGestureRecognizer Tapped="To_Tabbed"/>
+                <TapGestureRecognizer Command="{Binding LoginCommand}"/>
             </Frame.GestureRecognizers>
             <Label Text="Login" TextColor="#ffffff" FontFamily="Rubik-Regular" FontSize="18"  Margin="0,0,0,0" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
