--- a/CBayMobileApp/Views/Onboarding/Onboard.xaml
+++ b/CBayMobileApp/Views/Onboarding/Onboard.xaml
@@ -22,7 +22,7 @@
 
             <Frame HasShadow="False" CornerRadius="10" BackgroundColor="#E3E2E6" Margin="0,10,0,0" Padding="0,12" >
                 <Frame.GestureRecognizers>
-                    <TapGestureRecognizer />
+                    <TapGestureRecognizer Tapped="To_Signup"/>
                 </Frame.GestureRecognizers>
                 <Label Text="Get Started" TextColor="#000000" FontFamily="DMSans-Medium" FontSize="16"  Margin="0,0,0,0" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
