--- a/CBayMobileApp/Views/Account/Membership.xaml
+++ b/CBayMobileApp/Views/Account/Membership.xaml
@@ -11,19 +11,19 @@
                 <Label Text="{Binding Name}" TextColor="#000000" FontSize="20" FontFamily="DMSans-Bold"/>
 
                 <StackLayout Orientation="Horizontal" Spacing="0">
-                    <Label Text="Member since " TextColor="#000000" FontSize="14" FontFamily="DMSans-Regular"/>
+                    <Label Text="Ref code: " TextColor="#000000" FontSize="14" FontFamily="DMSans-Regular"/>
                     <Label Text="{Binding JoinedDate}" TextColor="#000000" FontSize="14" FontFamily="DMSans-Regular"/>
                 </StackLayout>
 
                 <Frame BackgroundColor="{StaticResource PrimaryColor}" Padding="20,15,20,10" HorizontalOptions="FillAndExpand" CornerRadius="10" Margin="0,10" HasShadow="False">
                     <StackLayout Margin="0,0,0,0">
-                        <Label Text="Jade" TextColor="#ffffff" FontSize="32" FontFamily="DMSans-Medium"/>
+                        <Label Text="{Binding Name}" TextColor="#ffffff" FontSize="32" FontFamily="DMSans-Medium"/>
                         <Label Text="CURRENT PLAN" TextColor="#ffffff" FontSize="14" FontFamily="DMSans-Medium" Margin="0,0,0,0"/>
                     </StackLayout>
                 </Frame>
             </StackLayout>
 
-            <StackLayout Margin="0,20,0,0">
+            <!--<StackLayout Margin="0,20,0,0">
                 <Label Text="Level Timeline" TextColor="#000000" FontSize="16" FontFamily="DMSans-Medium"/>
 
                 <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center" Margin="0,20,0,10">
@@ -62,7 +62,7 @@
                     <CheckBox Color="#2CB117"/>
                 </FlexLayout>
 
-            </StackLayout>
+            </StackLayout>-->
 
             <StackLayout Margin="0,0,0,40">
                 <Label Text="Downlines" TextColor="#000000" FontSize="18" Margin="0,15,0,7" FontFamily="DMSans-Medium" HorizontalTextAlignment="Start"/>
@@ -86,7 +86,7 @@
                 </Frame>
                 <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
                     <Frame.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="To_teamDownlines"/>
+                        <TapGestureRecognizer />
                     </Frame.GestureRecognizers>
                     <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
                         <StackLayout Orientation="Horizontal">
