--- a/CBayMobileApp/Views/Home/Dashboard.xaml
+++ b/CBayMobileApp/Views/Home/Dashboard.xaml
@@ -11,19 +11,28 @@
         </Grid.RowDefinitions>
 
         <StackLayout Grid.Row="0">
-            <Label Text="Hi, Abdulbai!" TextColor="#000000" FontSize="20" FontFamily="DMSans-Regular"/>
 
-            <Frame Padding="10,5" BackgroundColor="#D7FAF4" HorizontalOptions="StartAndExpand" CornerRadius="5" HasShadow="False">
+            <StackLayout Orientation="Horizontal" Spacing="0">
+                <Label Text="Hi, " TextColor="#000000" FontSize="20" FontFamily="DMSans-Regular"/>
+                <Label Text="{Binding FirstName}" TextColor="#000000" FontSize="20" FontFamily="DMSans-Regular"/>
+            </StackLayout>
+
+            <!--<Frame Padding="10,5" BackgroundColor="#D7FAF4" HorizontalOptions="StartAndExpand" CornerRadius="5" HasShadow="False">
                 <Label Text="Ref Code: 123456" TextColor="#19594D" FontSize="12" FontFamily="DMSans-Regular"/>
-            </Frame>
+            </Frame>-->
 
             <Frame BackgroundColor="{StaticResource PrimaryColor}" HorizontalOptions="FillAndExpand" CornerRadius="10" Margin="0,5" HasShadow="False">
                 <StackLayout>
-                    <Label Text="WALLET BALANCE" TextColor="#ffffff" FontSize="14" FontFamily="DMSans-Medium" Margin="0,10,0,0"/>
-                    <StackLayout Orientation="Horizontal" Margin="0,0,0,0">
-                        <Label Text="NGN 90,000.00" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>
+                    <Label Text="WALLET BALANCE" TextColor="#ffffff" FontSize="14" FontFamily="DMSans-Regular" Margin="0,5"/>
 
-                        <Image Source="cbayeye.png" VerticalOptions="CenterAndExpand" WidthRequest="35" HeightRequest="20" Margin="10,0,0,0"/>
+                    <StackLayout Orientation="Horizontal" Margin="0,0,0,0">
+                        <StackLayout Orientation="Horizontal" Spacing="0">
+                            <Label Text="NGN" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>
+                            <Label Text="{Binding AvailableBalance}" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>
+                            <Label Text=".00" TextColor="#ffffff" FontSize="20" FontFamily="DMSans-Medium"/>
+                        </StackLayout>
+                        
+                        <!--<Image Source="cbayeye.png" VerticalOptions="CenterAndExpand" WidthRequest="35" HeightRequest="20" Margin="10,0,0,0"/>-->
                     </StackLayout>
                 </StackLayout>
             </Frame>
@@ -107,12 +116,12 @@
 
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
-                <!--<CollectionView.EmptyView>
+                <CollectionView.EmptyView>
                     <StackLayout VerticalOptions="Center"  HorizontalOptions="Center">
                         <Image Source="blank3.png" HeightRequest="70" VerticalOptions="Center" HorizontalOptions="Center"/>
                         <Label  Margin="0,4,0,0" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold">No transaction found</Label>
                     </StackLayout>
-                </CollectionView.EmptyView>-->
+                </CollectionView.EmptyView>
             </CollectionView>
         </StackLayout>
 
